--- a/cloud/static/css/global.css
+++ b/cloud/static/css/global.css
@@ -62,6 +62,16 @@ body{
     padding: 5px;
 }
 
+.message-panel{
+    background-color: #f8f8f8;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    border-radius: 10px;
+    text-align: center;
+    margin-bottom: 20px;
+    max-width: 600px;
+    padding: 10px;
+}
+
 .django-control input, select, textarea{
     display: block;
     width: 100%;
@@ -82,7 +92,7 @@ body{
 }
 
 .universities{
-    max-width: 800px;
+    max-width: 600px;
     height: 150px;
     margin-left: auto;
     margin-right: auto;
@@ -94,6 +104,6 @@ body{
 }
 
 .search-panel{
-    max-width: 1000px;
+    max-width: 600px;
     padding: 10px;
 }
