--- a/cloud/templates/settings.html
+++ b/cloud/templates/settings.html
@@ -11,13 +11,15 @@
 
 {% block content %}
 
-
     <div class="container-fluid no-margin-padding">
+
+            {% comment %} TODO убрать это дерьмо {% endcomment %}
+            <input style="visibility: hidden; position: absolute" autofocus>
 
             <div class="post-panel panel-settings">
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
-                        <img class="avatar-settings full-width" src="{{ user_info.avatar.url }}" alt="avatar" >
+                        <img class="avatar-settings full-width" src="{{ user_info.avatar.url }}" alt="avatar">
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7" style="text-align: left">
                         <table class="table">
@@ -96,6 +98,6 @@
                 <a href="{% url 'sign_out' %}"> <div class="btn btn-warning" >Выйти!</div></a>
             </div>
 
-
     </div>
+
 {% endblock %}
