--- a/cloud/templates/settings.html
+++ b/cloud/templates/settings.html
@@ -95,7 +95,7 @@
                 </div>
 
                 <hr>
-                <a href="{% url 'sign_out' %}"> <div class="btn btn-warning" >Выйти!</div></a>
+                <a href="{% url 'signout' %}"> <div class="btn btn-warning" >Выйти!</div></a>
             </div>
 
     </div>
