--- a/cloud/templates/auth/signin.html
+++ b/cloud/templates/auth/signin.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 
-    <form method="post" action="{% url 'sign_in' %}">
+    <form method="post" action="{% url 'signin' %}">
         {% csrf_token %}
 
         <div class="container-fluid sign-form">
@@ -28,9 +28,8 @@
                 {% if error %} <p>{{ error }}</p> {% endif %}
             </div>
 
-            {# TODO реализовать восстановление пароля #}
             <div class="form-group" style="text-align: left">
-                <a href="#" ><label>Восстановить пароль</label></a>
+                <a href="{% url 'password_reset' %}" ><label>Восстановить пароль</label></a>
             </div>
 
             <div class="form-group">
