Добавлена форма обратной связи + рефакторинг

--- a/cloud/templates/main_template.html
+++ b/cloud/templates/main_template.html
@@ -66,6 +66,9 @@
                         <li {% block universities_active %}{% endblock %}>
                             <a href="{% url 'universities' %}">Подразделения<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-education"></span></a>
                         </li>
+                        <li {% block contacts_active %}{% endblock %}>
+                            <a href="{% url 'contacts' %}">Обратная связь<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-phone-alt"></span></a>
+                        </li>
 
                             {% if user.is_superuser %}
                                 <li style="background-color: #DBC6EB">
