--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     {% if validlink %}
-        <div class="sign-form">
+        <div class="sign-form django-control">
             <h3>Изменение пароля</h3>
             <hr>
             <form method="post">
@@ -11,7 +11,6 @@
                 <b>Придумайте новый пароль:</b>
                 {{ form.new_password1 }}<br>
                 <div style="color: red">{{ form.new_password1.errors }}</div>
-                <hr>
 
                 <b>Повторите пароль:</b>
                 {{ form.new_password2 }}<br>
@@ -27,7 +26,7 @@
             <p style="color: red">
                 Ссылка для изменения пароля некорректна, возможно из-за того что она уже была использована!
             <hr>
-            Пожалуйста попытайтесь снова или напишите нам на почту!
+            Пожалуйста попытайтесь снова или <a href="{% url 'contacts' %}">напишите нам на почту</a>!
             </p>
         </div>
     {% endif %}
