--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-    <div class="sign-form">
+    <div class="sign-form django-control">
         <h3>Сброс пароля</h3>
         <hr>
         <form method="post">
