--- a/cloud/templates/cloud/post_detail.html
+++ b/cloud/templates/cloud/post_detail.html
@@ -54,6 +54,10 @@
                         <th>Дата публикации:</th>
                         <td>{{ post.created_date }}</td>
                     </tr>
+                    <tr>
+                        <th>Просмотров:</th>
+                        <td>{{ post.views }}</td>
+                    </tr>
                 </table>
                  <div class="panel panel-info">
                      <div class="panel-heading" data-toggle="collapse" href="#programs-panel">Направления обучения</div>
