--- a/cloud/static/css/global.css
+++ b/cloud/static/css/global.css
@@ -1,44 +1,37 @@
-body{
+body {
     background-color: aliceblue;
 }
 
-.no-margin-padding{
-    margin: 0 !important;
-    padding: 0 !important;
-}
-
-.full-width{
-    width: 100%;
-}
-
-.content-block{
+.content-block {
     text-align: center;
     vertical-align: middle;
     margin-top: 20px;
 }
 
-.error{
+.no-margin-padding {
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
+.full-width {
+    width: 100%;
+}
+
+.error {
     text-align: center;
     color: crimson;
     font-weight: bold;
 }
 
-.avatar-settings{
+.avatar-settings {
     border-radius: 100%;
     width: 100%;
     max-width: 250px;
 }
 
-.panel-settings{
-    padding: 10px;
-    max-width: 600px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.sign-form{
+.sign-form {
     background-color: #f8f8f8;
-    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     border-radius: 10px;
     text-align: center;
     max-width: 600px;
@@ -49,22 +42,27 @@ body{
     padding: 20px;
 }
 
-.post-panel{
+.post-panel {
     background-color: #f8f8f8;
-    box-shadow: 0 0 10px rgba(0,0,0,0.5);
-    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
     text-align: center;
-    margin-bottom: 20px;
+    margin: 10px;
 }
 
-.post-panel img{
-    width : 100%;
+.post-panel img {
     padding: 5px;
+    width: 100%;
 }
 
-.message-panel{
+.post-panel img.univer-logo {
+    max-width: 100%;
+    max-height: 150px;
+}
+
+.message-panel {
     background-color: #f8f8f8;
-    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     border-radius: 10px;
     text-align: center;
     margin-bottom: 20px;
@@ -72,9 +70,9 @@ body{
     padding: 10px;
 }
 
-.password-reset-panel{
+.password-reset-panel {
     background-color: #f8f8f8;
-    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     border-radius: 10px;
     text-align: center;
     margin-bottom: 20px;
@@ -82,7 +80,7 @@ body{
     padding: 10px;
 }
 
-.django-control input, select, textarea{
+.django-control input, select, textarea {
     display: block;
     width: 100%;
     height: 34px;
@@ -94,26 +92,32 @@ body{
     background-image: none;
     border: 1px solid #ccc;
     border-radius: 4px;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
-    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
 
-.universities{
+.universities {
     max-width: 600px;
-    height: 150px;
+    min-height: 100px;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 20px;
 }
 
-.post-panel img.univer-logo{
-    max-width: 100%;
-    max-height: 150px;
-}
-
-.search-panel{
-    max-width: 600px;
+.search-panel {
+    background-color: #f8f8f8;
+    box-shadow: 3px 0 10px rgba(0, 0, 0, 0.5);
+    width: 100%;
+    margin: -20px -20px 0 0;
     padding: 10px;
+}
+
+.panel-settings {
+    padding: 10px;
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
 }
