--- a/cloud/templates/memes.html
+++ b/cloud/templates/memes.html
@@ -12,8 +12,9 @@
 
         <div class="container-fluid no-margin-padding">
 
+            <div class="col-xs-12 col-sm-12 col-md-1 col-lg-1"></div>
         {% for col_feed in colomns_feed%}
-            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+            <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
 
                     <table width="100%">
                         {% for feed in col_feed %}
@@ -36,6 +37,7 @@
 
             </div>
         {% endfor %}
+            <div class="col-xs-12 col-sm-12 col-md-1 col-lg-1"></div>
 
         </div>
 
