--- a/cloud/static/css/global.css
+++ b/cloud/static/css/global.css
@@ -47,7 +47,7 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     border-radius: 5px;
     text-align: center;
-    margin: 10px;
+    margin: 5px;
 }
 
 .post-panel img {
@@ -113,6 +113,14 @@ body {
     width: 100%;
     margin: -20px -20px 0 0;
     padding: 10px;
+}
+
+.search-post-panel {
+    background-color: #f8f8f8;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
+    margin: 10px;
+    padding-top: 10px;
 }
 
 .panel-settings {
