--- a/cloud/templates/cloud/post_detail.html
+++ b/cloud/templates/cloud/post_detail.html
@@ -25,7 +25,7 @@
                 {% if post.link %}
                     <br><br>
                     <a href="{{ post.link }}">
-                        <div class="btn btn-info" style="width:100%">Прикреплённая ссылка</div>
+                        <div class="btn btn-primary" style="width:100%">Прикреплённая ссылка</div>
                     </a>
                 {% endif %}
 
