Сверстана страница университетов

--- a/cloud/templates/main_template.html
+++ b/cloud/templates/main_template.html
@@ -64,7 +64,7 @@
                             <a href="{% url 'memes' %}">Мемесы<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-fire"></span></a>
                         </li>
                         <li {% block universities_active %}{% endblock %}>
-                            <a href="{% url 'universities' %}">Подразделения<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-education"></span></a>
+                            <a href="{% url 'universities_list' %}">Подразделения<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-education"></span></a>
                         </li>
                         <li {% block contacts_active %}{% endblock %}>
                             <a href="{% url 'contacts' %}">Обратная связь<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-phone-alt"></span></a>
