--- a/cloud/templates/universities.html
+++ b/cloud/templates/universities.html
@@ -21,7 +21,7 @@
         {% for univer in univer_list %}
 
             <div class="post-panel universities container-fluid">
-                <a href="#">
+                <a href="{{ univer.pk }}/">
                     <div class="col-xs-5 col-sm-3 col-md-3 col-lg-3">
                         <img class="univer-logo" src="{{ univer.logo.url }}" alt="logo">
                     </div>
